--- a/Css/style.css
+++ b/Css/style.css
@@ -12,32 +12,38 @@
 }
 body {
   font-family: "Inter", sans-serif;
-  background-color: var(--background-color);
+  background-color: #000000;
 }
 
 header {
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: auto;
-  margin-bottom: 150px;
+  /* margin-bottom: 150px; */
+}
+.head-back-color {
+  background-color: #222222;
+  /* padding-bottom: 50px; */
+  padding-top: 5px;
 }
 .navbar {
+  max-width: 1400px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 75%;
+  /* width: 75%; */
   margin: 0 auto;
-  margin-top: 3.75rem;
-  margin-bottom: 2.75rem;
+  margin-top: 90px;
+  margin-bottom: 48px;
 }
 .brand-name {
-  font-size: 2.25rem;
+  font-size: 32px;
   font-weight: 800;
   color: #e6533c;
 }
 .menu {
   display: flex;
   color: var(--font-color);
-  gap: 3rem;
+  gap: 69px;
   align-items: center;
   padding: 2px 15px 2px 1px;
   border: 0.7px solid rgb(82, 77, 77);
@@ -46,12 +52,12 @@ header {
 .menu li {
   list-style: none;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 23px;
 }
 .menu li > button {
   background-color: var(--primary-btn-color);
   color: var(--font-color);
-  font-size: 1.15rem;
+  font-size: 22px;
   padding: 0.7rem 1.5rem 0.7rem 1.5rem;
   border-radius: 46px;
   border: 0;
@@ -64,7 +70,6 @@ header {
 .menu-icon img {
   width: 30px;
   height: 28px;
-  /* background-color: black; */
 }
 
 /* mobile menu icons bar end here  */
@@ -72,7 +77,8 @@ header {
 /* Banner section start here */
 
 .banner-container {
-  width: 75%;
+  /* width: 75%; */
+  max-width: 1400px;
   margin: 0 auto;
   display: flex;
   color: var(--font-color);
@@ -81,10 +87,10 @@ header {
   width: 50%;
 }
 .banner-content h1 {
-  font-size: 3.8rem;
-  margin-bottom: 20px;
+  font-size: 100px;
+  margin-top: 82px;
+  margin-bottom: 25px;
   font-weight: 900;
-  word-spacing: -10px;
 }
 .banner-content p {
   font-size: 1.15rem;
@@ -94,13 +100,13 @@ header {
   margin-bottom: 15px;
 }
 .primary-btn {
-  margin-top: 34px;
+  margin-top: 50px;
 }
 .primary-btn button {
-  font-size: 18px;
-  padding: 10px 40px 10px 40px;
+  font-size: 22px;
+  padding: 18px 60px 18px 60px;
   border: none;
-  border-radius: 25px;
+  border-radius: 60px;
   color: var(--font-color);
 }
 .primary-btn .second-btn {
@@ -115,33 +121,35 @@ header {
 
 .banner-pic {
   width: 50%;
-  position: relative;
+  /* position: relative; */
 }
-/* .banner-pic img {
-  width: 400px;
-  height: 450px;
+.banner-pic img {
+  position: relative;
+  width: 425px;
+  height: 770px;
   margin-left: 60px;
-} */
+  left: 196px;
+}
 
-.banner-pic {
+/* .banner-pic {
   background-image: url("/background.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 400px;
   padding: 316px 0px;
-}
+} */
 .text-500 {
   position: absolute;
-  top: 35px;
-  right: 0px;
+  top: 380px;
+  right: 166px;
   text-align: center;
   padding: 8px;
 }
 
 .banner-text {
   padding: 18px 31px;
-  background: #302525;
-  border: 1px solid #4e3636;
+  background: #383838;
+  border: 1.2px solid #4b4b4b;
   border-radius: 15px;
   text-align: start;
 }
@@ -160,14 +168,16 @@ header {
 }
 .text-350 {
   position: absolute;
-  left: 0px;
-  bottom: 35px;
+  left: 1112px;
+  bottom: 29px;
   text-align: center;
-  padding: 8px;
+  background: #1e1e1e;
+  padding: 27px 33px;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  border-radius: 15px;
 }
 .text-350 p {
   opacity: 0.65;
@@ -177,26 +187,32 @@ header {
   height: 40px;
   background-color: #e6533c;
   border-radius: 50%;
-  margin-left: 30px;
+  margin-left: 4px;
 }
 
 /* banner section end here */
 
 section {
-  max-width: 1440px;
   margin: 0 auto;
 }
 .hero-container {
-  width: 75%;
+  max-width: 1440px;
+  /* width: 75%; */
   margin: 0 auto;
   color: var(--font-color);
   display: flex;
   flex-direction: column;
+  margin-top: 135px;
   margin-bottom: 150px;
 }
 .img-container {
   display: flex;
-  gap: 50px;
+  margin-top: 57px;
+}
+.hero-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .hero-content {
   text-align: center;
@@ -204,21 +220,26 @@ section {
 }
 
 .hero-content h2 {
-  font-size: 3.5rem;
+  font-size: 60px;
+  font-weight: 900;
 }
 .hero-content p {
-  font-size: 1.2rem;
+  font-size: 18px;
   opacity: 0.75;
   font-weight: 300px;
-  margin-top: 20px;
+  margin-top: 25px;
 }
 .round-img {
   margin-bottom: 30px;
 }
 .round-img img {
-  width: 100%;
+  width: 230px;
   border-radius: 50%;
 }
+/* .round-img img {
+  width: 100%;
+  border-radius: 50%;
+} */
 .round-text {
   text-align: center;
 }
@@ -237,13 +258,16 @@ section {
 
 /* run container start here */
 .run-container {
-  width: 77%;
+  /* width: 77%; */
+  max-width: 1440px;
   margin: 0 auto;
   display: flex;
   padding: 30px 40px 30px 60px;
   gap: 300px;
   justify-content: center;
   align-items: center;
+  background: #222222;
+  border-radius: 20px;
 }
 .run-content {
   display: flex;
@@ -251,97 +275,180 @@ section {
   /* align-items: center; */
   justify-content: center;
   gap: 15px;
-  padding: 35px;
+  padding: 20px;
 }
 .run-content h1 {
   color: var(--font-color);
-  font-size: 60px;
+  font-size: 71px;
+  font-weight: 900;
 }
 .run-content p {
   color: var(--font-color);
   opacity: 0.6;
+  line-height: 28px;
 }
 .j-btn button {
-  padding: 15px 60px 15px 60px;
+  padding: 22px 67px 22px 67px;
   border-radius: 35px;
+  font-size: 30px;
 }
 .run-img img {
-  width: 330px;
-  height: 330px;
+  width: 500px;
+  height: 420px;
   image-rendering: auto;
   border-radius: 35px;
 }
 /* BMI Calculator section run from here */
-.bmi-section {
+.bmi-container {
+  /* width: 77%; */
   max-width: 1440px;
   margin: 0 auto;
-}
-.bmi-container {
-  width: 77%;
-  margin: 0 auto;
   color: var(--font-color);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 60px;
 }
 .bmi-content {
+  max-width: 1440px;
+  color: var(--font-color);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 700px;
   text-align: left;
+  margin-top: 120px;
+  margin-bottom: 120px;
+  margin-left: 433px;
 }
 .bmi-content h1 {
   margin-bottom: 20px;
+  font-size: 70px;
+  font-weight: 900;
 }
 .bmi-content p {
   opacity: 0.7;
 }
+.bmi-backcolor {
+  background: #222222;
+}
 .bmi-calculator {
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
-  gap: 150px;
+  gap: 225px;
   padding: 25px 5px 30px 5px;
 }
 .bmi-chart {
-  color: var(--font-color);
+  color: #ffffff;
+  margin-top: 40px;
 }
 
-.bmi-chart table {
+.table {
   border-collapse: collapse;
-  margin-top: 30px;
+  margin-top: 75px;
+}
+.table th {
+  font-size: 19px;
+  padding: 14px 40px;
+  border: 2px solid #373737;
+  text-align: start;
+}
+
+.table tr td {
+  font-size: 20px;
+  padding: 16px 21px;
+  border: 2px solid #373737;
   opacity: 0.75;
 }
-
-.bmi-chart table tr td {
-  font: 20px;
-  padding: 10px;
-  border: 1px solid white;
+.bmi-chart h2 {
+  font-size: 38px;
+}
+.bmi-input {
+  margin-top: 40px;
+  color: #ffffff;
+  margin-bottom: 50px;
+}
+.input-content h2 {
+  font-size: 38px;
+}
+.input-content p {
+  margin: 10px 0px 50px 0px;
+  opacity: 0.7;
+  font-size: 19px;
+  line-height: 30px;
 }
 
 .input {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 40px);
-  gap: 10px;
-  border-radius: 10px;
+  gap: 50px;
   margin-top: 20px;
 }
-.input input,
-select {
-  background-color: rgb(181, 189, 196);
+.input input::placeholder {
+  color: #afafaf;
+  font-size: 20px;
+}
+.input input {
+  border-radius: 10px;
+}
+.hight {
+  margin-right: -23px;
+}
+.input input {
+  background-color: #373737;
+  border: none;
+  border-radius: 10px;
+  color: #afafaf;
+}
+.hight,
+.Weight {
+  padding: 38px 20px 30px 20px;
+}
+
+#option {
+  height: 67px;
+  padding: 15px;
+  font-size: 20px;
+  color: #afafaf;
+  background: #373737;
+  border-radius: 10px;
+  border: none;
+}
+
+#option option {
+  color: #afafaf;
+  font-size: 30px;
 }
 #Activitis {
-  width: 203%;
+  width: calc(200% + 50px);
+  color: #afafaf;
+  height: 67px;
+  padding: 15px;
+  font-size: 20px;
+  background-color: #373737;
+  border-radius: 10px;
+  border: none;
+}
+#Activitis option {
+  color: #afafaf;
+  font-size: 30px;
+}
+.calc {
+  margin-top: 103px;
+  width: 300px;
 }
 .calculate {
-  width: 200px;
-}
-.input-content p {
-  opacity: 0.7;
+  width: 100%;
+  font-size: 22px;
+  padding: 22px 45px 18px 57px;
+  border: none;
+  border-radius: 60px;
+  color: var(--font-color);
 }
 
 /* our team conteainer start here */
 
 .team-container {
-  width: 75%;
+  /* width: 75%; */
+  max-width: 1440px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -352,27 +459,33 @@ select {
   margin: 0 auto;
   text-align: center;
   margin-top: 70px;
+  width: 755px;
 }
 .team-content h1 {
-  font-size: 50px;
+  font-size: 60px;
   margin-bottom: 25px;
+  font-weight: 900;
 }
 .team-content p {
   line-height: 35px;
+  font-size: 18px;
   font-weight: 300;
   opacity: 0.75;
 }
 .team-img {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   position: relative;
-  gap: 10px;
-  padding: 20px;
+  background: #191919;
+  gap: 20px;
+  padding: 30px;
+  border-radius: 25px;
 }
 .team-img img {
-  width: 350px;
-  height: 320px;
+  width: 100%;
+  height: 390px;
+  border-radius: 25px;
 }
 .name {
   position: absolute;
@@ -414,45 +527,65 @@ select {
 /* footer start here */
 
 footer {
-  max-width: 1440px;
-  margin: 0 auto;
-  margin-top: -250px;
+  background: #191919;
+  margin-top: 110px;
 }
 .footer-container {
-  width: 75%;
+  max-width: 1440px;
   margin: 0 auto;
   color: var(--font-color);
   display: flex;
+  padding: 65px 10px 10px 10px;
 }
 .fitness {
   width: 40%;
 }
+.Fit {
+  font-size: 85px;
+  font-weight: 800;
+  color: #e6533c;
+}
 .fitness p {
   margin-top: 25px;
-  line-height: 28px;
+  line-height: 30px;
   opacity: 0.7;
+  font-weight: 200;
 }
 .get-started {
   width: 30%;
   margin-left: 100px;
 }
+.get-started h1 {
+  font-size: 42px;
+}
 .last-started {
   width: 30%;
 }
+.last-started h1 {
+  font-size: 42px;
+}
+.get {
+  margin-top: 45px;
+}
 .get li {
   list-style: none;
-  line-height: 40px;
-  opacity: 0.7;
+  line-height: 65px;
+  opacity: 0.5;
+  font-size: 30px;
+}
+hr {
+  opacity: 0.25;
 }
 .right-container {
   width: 75%;
   margin: 0 auto;
   margin-top: 70px;
+  padding: 20px 0px 20px 0px;
 }
 .right {
   color: var(--font-color);
-  font-size: 21px;
+  font-size: 24px;
   opacity: 0.7;
   text-align: center;
-  margin: 35px 0px;
+  margin: 50px 0px;
 }
