added challenge part training section

--- a/Css/style.css
+++ b/Css/style.css
@@ -108,6 +108,7 @@ header {
   border: none;
   border-radius: 60px;
   color: var(--font-color);
+  cursor: pointer;
 }
 .primary-btn .second-btn {
   border: 1px solid white;
@@ -298,6 +299,135 @@ section {
   image-rendering: auto;
   border-radius: 35px;
 }
+
+/* training section began here */
+.training-section {
+  max-width: 1520px;
+  margin: 0 auto;
+  margin-top: 100px;
+  border: 1px solid red;
+}
+.training-content {
+  width: 808px;
+  color: var(--font-color);
+  margin-bottom: 65px;
+}
+.training-content h1 {
+  font-size: 64px;
+  line-height: 100px;
+}
+.training-content p {
+  font-size: 19px;
+  opacity: 0.8;
+  color: #c1c1c1;
+}
+.training-img {
+  position: relative;
+}
+.flex-1 {
+  display: flex;
+}
+.flex-2 {
+  display: flex;
+}
+.flex-img img {
+}
+#images1 {
+  background-image: url(/images/exercise1.jpg);
+  background-color: rgba(6, 255, 210, 0.5);
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: overlay;
+}
+#images2 {
+  background-image: url(/images/exercise2.png);
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(255, 0, 0, 0.3);
+  background-blend-mode: overlay;
+}
+#images3 {
+  background-image: url(/images/exercise3.png);
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
+}
+#images4 {
+background-image: url(/images/exercise4.png);
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
+}
+#images5 {
+  background-image: url(/images/exercise5.jpg);
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(66, 255, 0, 0.3);
+  background-blend-mode: overlay;
+}
+#images6 {
+  background-image: url(/images/exercise6.jpg);
+  background-position: center;
+  background-size: cover;
+  background-color: rgba(0, 71, 255, 0.3);
+  background-blend-mode: overlay;
+}
+#images1 img {
+  width: 360px;
+  height: 300px;
+}
+#images2 img {
+  width: 733px;
+  height: 300px;
+}
+#images3 img {
+  width: 426px;
+  height: 300px;
+}
+#images4 img {
+  width: 575px;
+  height: 300px;
+}
+#images5 img {
+  width: 457px;
+  height: 300px;
+}
+#images6 img {
+  width: 486px;
+  height: 300px;
+}
+.trainer-name {
+  position: absolute;
+  color: var(--font-color);
+  font-weight: 400;
+}
+#N1 {
+  top: 220px;
+  left: 30px;
+}
+#N2 {
+  top: 64px;
+  left: 411px;
+}
+#N3 {
+  top: 229px;
+  right: 205px;
+}
+#N4 {
+  top: 332px;
+  left: 347px;
+}
+#N5 {
+  top: 524px;
+  left: 612px;
+}
+#N6 {
+  top: 532px;
+  right: 261px;
+}
+
 /* BMI Calculator section run from here */
 .bmi-container {
   /* width: 77%; */
