adding text-350 background color

--- a/Css/style.css
+++ b/Css/style.css
@@ -145,6 +145,7 @@ header {
   right: 166px;
   text-align: center;
   padding: 8px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .banner-text {
@@ -172,7 +173,9 @@ header {
   left: 1112px;
   bottom: 29px;
   text-align: center;
-  background: #1e1e1e;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  background: rgba(48, 48, 48, 0.54);
   padding: 27px 33px;
   display: flex;
   flex-direction: row;
