--- a/Css/style.css
+++ b/Css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +21,11 @@ header {
   /* margin-bottom: 150px; */
 }
 .head-back-color {
-  background-color: #222222;
+  background: linear-gradient(
+    180deg,
+    rgb(17, 17, 17),
+    rgba(119, 119, 119, 0) 100%
+  );
   /* padding-bottom: 50px; */
   padding-top: 5px;
 }
@@ -91,6 +95,9 @@ header {
   margin-top: 82px;
   margin-bottom: 25px;
   font-weight: 900;
+}
+.shape{
+  font-family: "Dancing Script", cursive;
 }
 .banner-content p {
   font-size: 1.15rem;
@@ -585,7 +592,6 @@ section {
 /* our team conteainer start here */
 
 .team-container {
-  /* width: 75%; */
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
@@ -615,10 +621,10 @@ section {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   position: relative;
-  background: #191919;
+  border-radius: 18px;
+  background: rgba(255, 255, 255, 0.1);
   gap: 20px;
   padding: 30px;
-  border-radius: 25px;
 }
 .team-img img {
   width: 100%;
