--- a/Css/style.css
+++ b/Css/style.css
@@ -9,6 +9,7 @@
   --font-color: #ffffff;
   --border: 1px solid red;
   --primary-btn-color: #e6533c;
+  --paragraph-color: rgba(255, 255, 255, 0.5);
 }
 body {
   font-family: "Inter", sans-serif;
@@ -16,17 +17,9 @@ body {
 }
 
 header {
-  /* max-width: 1400px; */
   margin: auto;
-  /* margin-bottom: 150px; */
 }
 .head-back-color {
-  background: linear-gradient(
-    180deg,
-    rgb(17, 17, 17),
-    rgba(119, 119, 119, 0) 100%
-  );
-  /* padding-bottom: 50px; */
   padding-top: 5px;
 }
 .navbar {
@@ -34,7 +27,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* width: 75%; */
   margin: 0 auto;
   margin-top: 90px;
   margin-bottom: 48px;
@@ -57,6 +49,7 @@ header {
   list-style: none;
   font-weight: 400;
   font-size: 23px;
+  color: rgba(255, 255, 255, 0.85);
 }
 .menu li > button {
   background-color: var(--primary-btn-color);
@@ -96,12 +89,12 @@ header {
   margin-bottom: 25px;
   font-weight: 900;
 }
-.shape{
+.shape {
   font-family: "Dancing Script", cursive;
 }
 .banner-content p {
   font-size: 1.15rem;
-  opacity: 0.75;
+  color: var(--paragraph-color);
   font-weight: 300;
   margin-top: 30px;
   margin-bottom: 15px;
@@ -129,7 +122,6 @@ header {
 
 .banner-pic {
   width: 50%;
-  /* position: relative; */
 }
 .banner-pic img {
   position: relative;
@@ -139,13 +131,6 @@ header {
   left: 196px;
 }
 
-/* .banner-pic {
-  background-image: url("/background.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 400px;
-  padding: 316px 0px;
-} */
 .text-500 {
   position: absolute;
   top: 380px;
@@ -161,6 +146,9 @@ header {
   border: 1.2px solid #4b4b4b;
   border-radius: 15px;
   text-align: start;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  background: rgba(48, 48, 48, 0.54);
 }
 
 .text-500.banner-text h1 {
@@ -173,7 +161,7 @@ header {
   letter-spacing: 1.8px;
 }
 .text-500 p {
-  opacity: 0.65;
+  color: var(--paragraph-color);
 }
 .text-350 {
   position: absolute;
@@ -191,7 +179,7 @@ header {
   border-radius: 15px;
 }
 .text-350 p {
-  opacity: 0.65;
+  color: var(--paragraph-color);
 }
 .circle {
   width: 40px;
@@ -208,7 +196,6 @@ section {
 }
 .hero-container {
   max-width: 1440px;
-  /* width: 75%; */
   margin: 0 auto;
   color: var(--font-color);
   display: flex;
@@ -236,7 +223,7 @@ section {
 }
 .hero-content p {
   font-size: 18px;
-  opacity: 0.75;
+  color: var(--paragraph-color);
   font-weight: 300px;
   margin-top: 25px;
 }
@@ -247,10 +234,7 @@ section {
   width: 230px;
   border-radius: 50%;
 }
-/* .round-img img {
-  width: 100%;
-  border-radius: 50%;
-} */
+
 .round-text {
   text-align: center;
 }
@@ -262,14 +246,13 @@ section {
 .round-text p {
   font-size: 1rem;
   font-weight: 400;
-  opacity: 0.6;
+  color: var(--paragraph-color);
 }
 
 /* hero section end here */
 
 /* run container start here */
 .run-container {
-  /* width: 77%; */
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
@@ -283,7 +266,6 @@ section {
 .run-content {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: center;
   gap: 15px;
   padding: 20px;
@@ -294,8 +276,7 @@ section {
   font-weight: 900;
 }
 .run-content p {
-  color: var(--font-color);
-  opacity: 0.6;
+  color: var(--paragraph-color);
   line-height: 28px;
 }
 .j-btn button {
@@ -327,8 +308,7 @@ section {
 }
 .training-content p {
   font-size: 19px;
-  opacity: 0.8;
-  color: #c1c1c1;
+  color: var(--paragraph-color);
 }
 .training-img {
   position: relative;
@@ -445,7 +425,6 @@ section {
 
 /* BMI Calculator section run from here */
 .bmi-container {
-  /* width: 77%; */
   max-width: 1440px;
   margin: 0 auto;
   color: var(--font-color);
@@ -468,7 +447,7 @@ section {
   font-weight: 900;
 }
 .bmi-content p {
-  opacity: 0.7;
+  color: var(--paragraph-color);
 }
 .bmi-backcolor {
   background: #222222;
@@ -488,22 +467,27 @@ section {
 .table {
   border-collapse: collapse;
   margin-top: 75px;
+  width: 524px;
+  height: 348px;
 }
 .table th {
-  font-size: 19px;
-  padding: 14px 40px;
+  width: 246px;
+  font-size: 22px;
+  font-weight: 500;
+  padding: 16px 50px;
   border: 2px solid #373737;
   text-align: start;
+  color: rgba(255, 255, 255, 0.85);
 }
 
 .table tr td {
   font-size: 20px;
-  padding: 16px 21px;
+  padding: 16px 40px;
   border: 2px solid #373737;
-  opacity: 0.75;
+  color: rgba(255, 255, 255, 0.75);
 }
 .bmi-chart h2 {
-  font-size: 38px;
+  font-size: 45px;
 }
 .bmi-input {
   margin-top: 40px;
@@ -515,7 +499,7 @@ section {
 }
 .input-content p {
   margin: 10px 0px 50px 0px;
-  opacity: 0.7;
+  color: var(--paragraph-color);
   font-size: 19px;
   line-height: 30px;
 }
@@ -614,7 +598,7 @@ section {
   line-height: 35px;
   font-size: 18px;
   font-weight: 300;
-  opacity: 0.75;
+  color: var(--paragraph-color);
 }
 .team-img {
   display: grid;
@@ -628,42 +612,45 @@ section {
 }
 .team-img img {
   width: 100%;
-  height: 390px;
-  border-radius: 25px;
+  height: 340px;
+  border-radius: 15px;
+  filter: brightness(80%);
 }
 .name {
   position: absolute;
   color: var(--font-color);
   font-weight: 900;
+  font-size: 26px;
+  font-weight: 900;
 }
 #name1 {
-  top: 348px;
+  top: 284px;
   left: 57px;
 }
 #name2 {
-  top: 350px;
+  top: 284px;
   left: 526px;
 }
 #name3 {
-  top: 352px;
+  top: 284px;
   left: 986px;
 }
 #name4 {
-  top: 760px;
-  left: 75px;
+  top: 650px;
+  left: 60px;
 }
 #name5 {
-  top: 750px;
+  top: 650px;
   left: 534px;
 }
 #name6 {
-  top: 750px;
-  left: 1002px;
+  top: 650px;
+  left: 992px;
 }
 .trainer {
   font-weight: 300;
   font-size: 17px;
-  opacity: 0.75;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 /* gental section */
@@ -692,7 +679,7 @@ footer {
 .fitness p {
   margin-top: 25px;
   line-height: 30px;
-  opacity: 0.7;
+  color: var(--paragraph-color);
   font-weight: 200;
 }
 .get-started {
